--- a/app/templates/map-data-save.hbs
+++ b/app/templates/map-data-save.hbs
@@ -1,5 +1,5 @@
 {{#if selectedTrail}}
-    <button type="button" class="btn btn-default" {{action 'saveTrail' selectedTrail}}>
+    <button type="button" class="btn btn-default" {{action 'save' selectedTrail}}>
         <span class="glyphicon glyphicon-save" aria-hidden="true"></span>
     </button>
 {{/if}}
