découpage du code des templates et corrections d'un bug dans l'importation de piste

--- a/app/templates/map-data.hbs
+++ b/app/templates/map-data.hbs
@@ -1,105 +1,6 @@
-<!--<form class="form-inline btn-group">-->
-{{#dropdown-list item="Trails" img="assets/images/track.png" toggle="tooltip" title="Create or select a trail"}}
-    <ul class="dropdown-menu map-data-trails-dropdown">
-        <li>
-            <table class="table table-hover table-striped table-condensed">
-                <thead>
-                <tr>
-                    <th colspan="2">
-                        <div class="input-group">
-                          {{input class="form-control btn-group" placeholder="trail's name" value=addTrailName action='addTrail'}}
-                            <span class="input-group-btn">
-                              <button type="button" class="btn btn-default" {{action 'addTrail'}}>
-                                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                              </button>
-                              <button type="button"
-                                      class="btn btn-default" {{action 'command' 'trail.open'}}>
-                                  <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
-                              </button>
-                            </span>
-                        </div>
-                    </th>
-                </tr>
-                </thead>
-                <tbody>
-                {{#each trail in trails}}
-                    <tr class={{if trail.selected 'success' ''}} {{action 'changeTrack' trail}}>
-                        <td class="map-data-trails-title">{{trail.name}}</td>
-                        <td class="map-data-trails-buttons">
-                            <div class="btn-group">
-                                <button type="button" toggle="tooltip"
-                                        title="Delete the trail from your browser's memory"
-                                        class="btn btn-warning" {{action 'command' 'trail.delete' selectedTrail}}>
-                                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                                </button>
-                                <button type="button" toggle="tooltip" title="Export the trail to filesystem"
-                                        class="btn btn-default" {{action 'command' 'trail.export' selectedTrail}}>
-                                    <span class="glyphicon glyphicon-export" aria-hidden="true"></span>
-                                </button>
-                            </div>
-                        </td>
-                    </tr>
-                {{/each}}
-                </tbody>
-            </table>
-        </li>
-    </ul>
-{{/dropdown-list}}
+{{render "mapDataTrailManager" controller="mapData"}}
 {{#if selectedTrail}}
-    <!--  data-toggle="tooltip" title="Tools related to your trails" -->
-    {{#dropdown-list item="Tools" icon="th" btn-radius="no-radius" toggle="tooltip" title="Tools related to the selected trail"}}
-        <ul class="dropdown-menu map-data-tools-dropdown">
-            <li class="btn-group">
-                <button type="button" data-toggle="tooltip" data-original-title="Draw the Trailer's Trail"
-                        class="btn btn-pink map-draw-trailer" {{action 'command' 'data.trailer.create'}}>
-                    <img src="assets/images/walk.png" class="inverted" width="16" height="16"/>
-                </button>
-                <button type="button" data-toggle="tooltip" data-original-title="Draw the Team's Trail"
-                        class="btn btn-warning map-draw-team" {{action 'command' 'data.team.create'}}>
-                    <img src="assets/images/track.png" class="inverted" width="16" height="16"/>
-                </button>
-              {{view 'mtgLevels'}}
-              {{view 'mtgItems'}}
-              {{#dropdown-list item="Import" icon="import" toggle="tooltip" title="Import a path related ot the selected trail"}}
-                  <ul class="dropdown-menu map-data-import-dropdown">
-                      <li>
-                          <table class="table table-hover table-condensed">
-                              <tbody>
-                              <tr>
-                                  <td {{action 'triggerImport' 'map-data-import-trailer-input'}}>
-                                  <span type="button" data-toggle="tooltip" title="Import the Trailer's Trail"
-                                        class="btn btn-success map-data-import-trailer">
-                                      <img src="assets/images/walk.png" class="inverted" width="16" height="16"/>
-                                  </span>
-                                      Import trailer's track
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td {{action 'triggerImport' 'map-data-import-team-input'}}>
-                                  <span type="button" data-toggle="tooltip" title="Import the Team's Trail"
-                                        class="btn btn-warning map-data-import-team">
-                                      <img src="assets/images/track.png" class="inverted" width="16" height="16"/>
-                                  </span>
-                                      Import team's track
-                                  </td>
-                              </tr>
-                              </tbody>
-                          </table>
-                          <input type="file" id="map-data-import-trailer-input" class="hidden" accept=".gpx"/>
-                          <input type="file" id="map-data-import-team-input" class="hidden" accept=".gpx"/>
-                      </li>
-                  </ul>
-              {{/dropdown-list}}
-              {{#dropdown-list item="Export" icon="export" toggle="tooltip" title="Export the path related ot the trailer's trail"}}
-                  <ul class="dropdown-menu map-data-export-dropdown">
-                    {{#each format in formats}}
-                        <li><a {{action 'exportTrace' format selectedTrail}}>{{format}}</a></li>
-                    {{/each}}
-                  </ul>
-              {{/dropdown-list}}
-            </li>
-        </ul>
-    {{/dropdown-list}}
-    {{render "mapDraw" controller="mapDraw"}}
+  {{render "mapDataTrail" controller="mapData"}}
+  {{render "mapDraw" controller="mapDraw"}}
 {{/if}}
 
