--- a/app/templates/map-lt.hbs
+++ b/app/templates/map-lt.hbs
@@ -4,8 +4,8 @@
     <img src="assets/images/canimap_cross_on_dog.png"/>
 </div>
 <div class="top-container btn-group">
-  {{render "mapDataLt" controller="mapData"}}
-  {{render "mapDrawLt" controller="mapDraw"}}
+  {{render "mtgTrailBasic" controller="mtgTrail"}}
+  {{render "mapDrawBasic" controller="mapDraw"}}
   <div class="mtg-mode">
     <a role="button" class="btn btn-success radius-right" data-toggle="tooltip"
        title="Switch to expert mode"  {{bind-attr href=expertURL}}>
