--- a/app/templates/mtg-levels.hbs
+++ b/app/templates/mtg-levels.hbs
@@ -1,5 +1,5 @@
 {{#dropdown-list item="Level" img="assets/images/rocket.png" btn-radius="no-radius" toggle="tooltip" title="Select the trail's level"}}
-    <ul class="dropdown-menu map-data-level-dropdown">
+    <ul class="dropdown-menu mtg-trail-level-dropdown">
         <li class="header">
             <table class="table table-hover table-condensed">
                 <thead>
