--- a/app/templates/mtg-trail-tools-trace-team.hbs
+++ b/app/templates/mtg-trail-tools-trace-team.hbs
@@ -1,4 +1,4 @@
 <button type="button" data-toggle="tooltip" data-original-title="Draw the Team's Trail"
-        class="btn btn-warning map-draw-team" {{action 'command' 'data.team.create'}}>
+        class="btn btn-warning map-draw-team" {{action 'command' 'trace.team.create'}}>
     <img src="assets/images/track.png" class="inverted" width="16" height="16"/>
 </button>
