--- a/app/templates/mtg-trail-tools-trace-trailer.hbs
+++ b/app/templates/mtg-trail-tools-trace-trailer.hbs
@@ -1,4 +1,4 @@
 <button type="button" data-toggle="tooltip" data-original-title="Draw the Trailer's Trail"
-        class="btn btn-pink map-draw-trailer" {{action 'command' 'data.trailer.create'}}>
+        class="btn btn-pink map-draw-trailer" {{action 'command' 'trace.trailer.create'}}>
     <img src="assets/images/walk.png" class="inverted" width="16" height="16"/>
 </button>
