--- a/app/templates/mtg-trail-manager.hbs
+++ b/app/templates/mtg-trail-manager.hbs
@@ -1,16 +1,16 @@
 {{#dropdown-list item="Trails" img="assets/images/track.png" toggle="tooltip" title="Create or select a trail"}}
-    <ul class="dropdown-menu map-data-trails-dropdown">
+    <ul class="dropdown-menu mtg-trail-trails-dropdown">
         <li>
             <table class="table table-hover table-striped table-condensed">
                 <thead>
                 <tr>
                     <th colspan="2">
-                      {{render "mapDataTrailManagerHead" controller="mapData"}}
+                      {{render "mtgTrailManagerHead" controller="mtgTrail"}}
                     </th>
                 </tr>
                 </thead>
                 <tbody>
-                {{render "mapDataTrailManagerTrails" controller="mapData"}}
+                {{render "mtgTrailManagerTrails" controller="mtgTrail"}}
                 </tbody>
             </table>
         </li>
