--- a/app/templates/mtg-trail-tools.hbs
+++ b/app/templates/mtg-trail-tools.hbs
@@ -3,7 +3,7 @@
         <li class="btn-group">
           {{render "mtgTrailToolsTraceTrailer" controller="mtgTrace"}}
           {{render "mtgTrailToolsTraceTeam" controller="mtgTrace"}}
-          {{view 'mtgLevels'}}
+          {{render 'mtgLevels' controller="mtgLevel"}}
           {{render 'mtgItems' controller="mtgItem"}}
           {{render "mtgTrailToolsImportTraces" controller="mtgTrace"}}
           {{render "mtgTrailToolsExportTraces" controller="mtgTrace"}}
