--- a/app/templates/map-layers.hbs
+++ b/app/templates/map-layers.hbs
@@ -9,12 +9,13 @@
                 </tr>
                 </thead>
                 <tbody>
-                {{#each layer in tileLayers itemController="mapLayer"}}
+                {{#each tileLayers as |layer|}}
+
                     <tr {{bind-attr id=layer.model.identifier}}>
                         <td class="layer-id">
-                            <label class="hint--top" {{bind-attr data-toggle="tooltip" data-original-title=layer.model.title}}>
+                            <label {{bind-attr data-toggle="tooltip" data-original-title=layer.title}}>
                               {{input type="checkbox" checked=layer.visible}}
-                              {{str-sub layer.model.title 20}}
+                              {{str-sub layer.title 20}}
                             </label>
                         </td>
                         <td>
