--- a/app/templates/mtg-trail-basic.hbs
+++ b/app/templates/mtg-trail-basic.hbs
@@ -22,7 +22,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                {{#each trail in trails}}
+                {{#each trails as |trail|}}
                     <tr class={{if trail.selected 'success' ''}} {{action 'changeTrack' trail}}>
                         <td class="mtg-trail-trails-title">{{trail.name}}</td>
                         <td class="mtg-trail-tools-buttons">
