--- a/app/templates/mtg-trail-tools-export-traces.hbs
+++ b/app/templates/mtg-trail-tools-export-traces.hbs
@@ -1,6 +1,6 @@
 {{#dropdown-list item="Export" icon="export" toggle="tooltip" title="Export the path related ot the trailer's trail"}}
     <ul class="dropdown-menu mtg-trail-tools-export-dropdown">
-      {{#each format in formats}}
+      {{#each formats as |format|}}
           <li><a {{action 'command' 'trace.trailer.export' format}}>{{format}}</a></li>
       {{/each}}
     </ul>
