--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -7,7 +7,7 @@
   {{render "mtgTrail" controller="mtgTrail"}}
   {{render "mtgTrailSave" controller="mtgTrail"}}
   {{render "mapWeather" controller="mapWeather"}}
-  {{view "mapLayers"}}
+  {{render "mapLayers" controller="mapLayers"}}
   <div class="mtg-mode">
       <a role="button" class="btn btn-success radius-right" data-toggle="tooltip"
          title="Switch to basic mode" {{bind-attr href=basicURL}}>
