correction problèmes d'items (ajout et suppression et reodonancement)

--- a/app/templates/mtg-items.hbs
+++ b/app/templates/mtg-items.hbs
@@ -32,7 +32,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                {{#each selectedTrail.items as |item|}}
+                {{#each items as |item|}}
                     <tr>
                         <td class="mtg-item-index-container">
                           {{item.index}}
